--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 
 <h1>As an It Professional</h1>
 
-<p>My first paragraph.</p>
+<p>As an IT professionals perform a number of different tasks – they are the people who test, build, install, repair, or maintain the hardware and software associated with complex computer systems in one or more locations..</p>
+
 
 </body>
 </html>
