--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 
 <h1>As an It Professional</h1>
 
-<p>As an IT professionals perform a number of different tasks – they are the people who test, build, install, repair, or maintain the hardware and software associated with complex computer systems in one or more locations..</p>
+<p>As an IT professional I perform a number of a different tasks I will test, build, install, repair, or maintain the
+ hardware and software associated with complex computer systems in one or more locations. IT professionals perform a 
+ number of different tasks – they are the people who test, build, install, repair, or maintain the hardware and software 
+ associated with complex computer systems in one or more locations..</>
 
 
 </body>
