--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <My first Portfolio in GitHub>
 <html>
-<body style="background-color:powderblue;">
+<body style="background-color:grey;">
 
 <h1>As an It Professional</h1>
 
