--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <My first Portfolio in GitHub>
 <html>
 <body style="background-color:grey;">
+ <picture>
+  <source srcset="img_avatar.png">
+  <source srcset="img_girl.jpg">
+  <img src="img_beatles.gif" alt="Beatles" style="width:auto;">
+</picture>
+
 
 <h1>As an It Professional</h1>
 
