--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 
 <p>As an IT professional I perform a number of a different tasks I will test, build, install, repair, or maintain the
  hardware and software associated with complex computer systems in one or more locations. IT professionals perform a 
- number of different tasks – they are the people who test, build, install, repair, or maintain the hardware and software 
- associated with complex computer systems in one or more locations..</>
+ number of different tasks they are the people who test, build, install, repair, or maintain the hardware and software 
+ associated with complex computer systems in one or more locations.One of my dreams had always been becoming the greatest
+ teacher for my students. Participating in everyday teachermade my dreams become a reality. I have grown exponentially in
+ my profession in the past three years thanks to all the professional development from my school.</>
 
 
 </body>
